# Humble-Whole

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
tests/: CMakeLists.txt
tests/include/: testApp.h
tests/src/: appStart.cpp  testApp.cpp
